--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+resources/*.pem
+test.sh
+
+# (build) artifacts
 apps/
 target/
+
+# Eclipse
+**/.classpath
+**/.project
+**/.settings/
+.project
+
+# Netbeans
+nbproject/
+nbactions.xml.project
+nbactions.xml
+
+# IntelliJ
+.idea/
+*.iml
+
+# Maven
+**/pom.xml.*
+**/release.properties
+**/.flattened-pom.xml
+
+# VS Code
+.factorypath
