--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <!-- Adjust artifact details here for your project -->
     <groupId>de.rub.nds.tls.template</groupId>
     <artifactId>TLS-Attacker-Template</artifactId>
-    <version>1.3</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <!-- Adjust name here for your project -->
@@ -27,8 +27,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <main.basedir>${project.basedir}</main.basedir>
         <!-- The following variables are required for Jenkins CI -->
         <skipTests>false</skipTests>
@@ -58,7 +58,6 @@
                     <!-- Build an executable JAR -->
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.4.2</version>
                     <configuration>
                         <archive>
                             <manifest>
@@ -76,6 +75,9 @@
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
+                        <compilerArgs>
+                            <compilerArg>-proc:full</compilerArg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <!-- Plugin to execute unit tests -->
@@ -292,7 +294,7 @@
                             <spacesPerTab>4</spacesPerTab>
                         </indent>
                         <googleJavaFormat>
-                            <version>1.15.0</version>
+                            <version>1.25.2</version>
                             <style>AOSP</style>
                         </googleJavaFormat>
                         <licenseHeader>
