--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <dependency>
             <groupId>de.rub.nds.tls.attacker</groupId>
             <artifactId>tls-core</artifactId>
+            <version>7.5.0</version>
         </dependency>
 
         <!-- scope: test -->
